# job-search-engine

./: .dockerignore  .env  .envrc  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  feature-engineering.ipynb  pyproject.toml  requirements.txt
.direnv/python-3.11/: pyvenv.cfg
app/: config.py
app/api/: main.py
app/data/: processed_candidates.json  raw_candidates.json  raw_jobs.json
app/model/: schemas.py
app/prompts/: prompts.py
app/service/: candidate_service.py  llm_manager.py  search_service.py  vector_store_service.py
webapp/: 1_Landing.py  1_👋_Welcome.py
webapp/pages/: 2_Candidates.py  3_Jobs.py  4_Search.py
